--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+gunicorn==20.0.4
+PyYAML==5.3.1
 einops==0.2.0
 flask==1.1.2
 pillow==8.0.1
@@ -7,4 +9,3 @@ requests==2.24.0
 opencv-python==4.4.0.46
 gdown==3.12.2
 matplotlib==3.3.2
-python-dotenv==0.14.0
